--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 @media print {
   @page {
     size: A4;
-    margin: 1cm 1cm 2cm 1cm; /* top right bottom left - margen inferior más grande */
+    margin: 1cm;
   }
   
   body {
